add contacts mobile

--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -3,6 +3,9 @@
 
 <div class="dialog-container">
   <div class="dialog-left">
+     <button class="close-btn-mobile">
+      <img src="assets/img/icons/close_icon_white.svg" alt="Close-Mobile" />
+    </button>
     <img
       src="assets/img/icons/small-contact-logo.svg"
       alt="Join Logo"
