--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -30,6 +30,12 @@
       [ngClass]="{ active: navigationService.selectedItem === 5 }"
     >
     </app-imprint>
+    
+    <app-help
+      id="help-section"
+      [ngClass]="{ active: navigationService.selectedItem === 6 }"
+    >
+    </app-help>
   </div>
 
   <app-footer></app-footer>
