add contacts function test

--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -6,6 +6,10 @@
                 <span>Add new Contact</span>
                 <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
             </button>
+            <!-- <button (click)="openDialog()">
+                <span>Add new Contact</span>
+                <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
+            </button> -->
 
             <div class="single-contact" *ngFor="let group of getGroupedContacts() | keyvalue">
                 <div class="letter">
