--- a/src/app/main/content/contacts/contacts.component.scss
+++ b/src/app/main/content/contacts/contacts.component.scss
@@ -129,7 +129,7 @@ span {
     height: 100%;
     padding-top: 80px;
     padding-left: 50px;
-    box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;    
+    box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1) inset;
 }
 
 .headline {
@@ -154,17 +154,18 @@ span {
     background-color: transparent;
 
     /* Ausgangszustand: von der rechten Seite nach links verschieben */
-        transform: translateX(100%);
-        opacity: 0;
-        /* Unsichtbar, wenn nicht aktiv */
-        transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
-    
-        /* Wenn die Klasse 'active' hinzugefügt wird, wird der Container sichtbar */
-        &.active {
-            transform: translateX(0);
-            opacity: 1;
-            /* Sichtbar, wenn aktiv */
-        }
+    transform: translateX(100%);
+    opacity: 0; /* Unsichtbar, wenn nicht aktiv */
+    // display: none;
+    transition: transform 1.5s ease-in-out, opacity 0.01s ease-in-out;
+
+}
+
+/* Wenn die Klasse 'active' hinzugefügt wird, wird der Container sichtbar */
+.active {
+    transform: translateX(0);
+    opacity: 1;  /* Sichtbar, wenn aktiv */
+    // display: block;
 }
 
 .contact_content_head {
