--- a/src/app/main/content/content.component.html
+++ b/src/app/main/content/content.component.html
@@ -34,7 +34,7 @@
     <app-help
       id="help-section"
       [ngClass]="{ active: navigationService.selectedItem === 6 }"
-    >
+    > Test
     </app-help>
   </div>
 
