--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,22 +1,27 @@
 <section>
-    <div class="header_left">
-        <h1>Kanban Project Management Tool</h1>
+  <div class="header_left">
+    <h1>Kanban Project Management Tool</h1>
+  </div>
+  <div class="header_right">
+    <a
+      class="help_link"
+      [ngClass]="{ active: navigationService.selectedItem === 6 }"
+      (click)="selectItem(6)"
+    ></a>
+
+    <div (click)="toggleOverlay()" class="initials_btn">
+      <p>ID</p>
     </div>
-    <div class="header_right">
-        <a class="help_link" href=""></a>
-        <a [ngClass]="{ active: navigationService.selectedItem === 6 }"
-            (click)="selectItem(6)">
-        </a>
-        <div (click)="toggleOverlay()" class="initials_btn">
-            <p>ID</p>
-        </div>
-        <div id="overlay" [ngClass]="{'d_none': overlayState }" class="header_overlay">
-            <div class="inner_overlay">
-                <a href="">Legal Notice</a>
-                <a href="">Privacy Policy</a>
-                <a href="">Log out</a>
-            </div>
-            
-        </div>
-    </div> 
+    <div
+      id="overlay"
+      [ngClass]="{ d_none: overlayState }"
+      class="header_overlay"
+    >
+      <div class="inner_overlay">
+        <a href="">Legal Notice</a>
+        <a href="">Privacy Policy</a>
+        <a href="">Log out</a>
+      </div>
+    </div>
+  </div>
 </section>
