--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -2,8 +2,8 @@
     <div class="contact-list">
         <div class="list">
             <!-- <button (click)="addContactList()"> -->
-            <!-- <button> --> 
-                <button (click)="openOverlay()">
+            <!-- <button> -->
+            <button (click)="openOverlay()">
                 <span>Add new Contact</span>
                 <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
             </button>
@@ -11,14 +11,13 @@
                 <span>Add new Contact</span>
                 <img class="person_add_icon" src="assets/img/icons/person_add_icon.svg" alt="" />
             </button> -->
-
-            <div class="single-contact" *ngFor="let group of getGroupedContacts() | keyvalue">
+            @for (group of contactService.getGroupedContacts() | keyvalue; track $index) {
+            <div class="single-contact" >
                 <div class="letter">
                     {{ group.key }}
                 </div>
-
-                <div class="single-contact-container" *ngFor="let contact of group.value; let i = index"
-                    (click)="selectContact(contact)">
+                @for (contact of group.value; track $index) {
+                <div class="single-contact-container" (click)="selectContact(contact)">
                     <div class="single-contact-content">
                         <div class="profile_badge"
                             [ngStyle]="{ 'background-color': getBadgeColor(getIndexInFullList(contact)) }">
@@ -29,50 +28,50 @@
                             <a class="email">{{ contact.email }}</a>
                         </div>
                     </div>
-                </div>
-            </div>
+                </div>}
+            </div>}
         </div>
     </div>
-    <div class="contacts" >
+    <div class="contacts">
         <div class="headline">
             <h1>Contacts</h1>
             <img src="assets/img/icons/or_icon.svg" />
             <p>Better with a team</p>
         </div>
         @if(selectedContact) {
-            <div class="contact_content" [ngClass]="{'active': isContactSelected}" >
-                <div class="contact_content_head">
-                    <div class="contact_profile_badge"
-                        [ngStyle]="{ 'background-color': getBadgeColor(getIndexInFullList(selectedContact)) }">
-                        {{ selectedContactInitials }} 
-                    </div>
-                    <div class="contact_name_section">
-                        <p class="name"> {{ selectedContact.name }}</p>
-                        <div class="editing_section">
-                            <div (click)="updateContact()" class="edit">
-                                <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg">
-                                <img class="pencil_icon_hover_blue" src="assets/img/icons/pencil_icon_hover_blue.svg">
-                                <p>Edit</p>
-                            </div>
-                            
-                            <div (click)="deleteContact()" class="delete">
-                                <img class="trash_icon" src="assets/img/icons/trash_icon.svg">
-                                <img class="trash_icon_hover_blue" src="assets/img/icons/trash_icon_hover_blue.svg">
-                                <p>Delete</p>
-                            </div>
+        <div class="contact_content" [ngClass]="{'active': isContactSelected}">
+            <div class="contact_content_head">
+                <div class="contact_profile_badge"
+                    [ngStyle]="{ 'background-color': getBadgeColor(getIndexInFullList(selectedContact)) }">
+                    {{ selectedContactInitials }}
+                </div>
+                <div class="contact_name_section">
+                    <p class="name"> {{ selectedContact.name }}</p>
+                    <div class="editing_section">
+                        <div (click)="updateContact()" class="edit">
+                            <img class="pencil_icon" src="assets/img/icons/pencil_icon.svg">
+                            <img class="pencil_icon_hover_blue" src="assets/img/icons/pencil_icon_hover_blue.svg">
+                            <p>Edit</p>
+                        </div>
+
+                        <div (click)="deleteContact()" class="delete">
+                            <img class="trash_icon" src="assets/img/icons/trash_icon.svg">
+                            <img class="trash_icon_hover_blue" src="assets/img/icons/trash_icon_hover_blue.svg">
+                            <p>Delete</p>
                         </div>
                     </div>
                 </div>
-                <div class="contact_detail_section">
-                    <p class="information_headline">Contact Information</p>
-                    <div class="information"> 
-                        <p class="email_headline">Email</p>
-                        <p class="email">{{ selectedContact.email }}</p>
-                        <p class="phone_headline">Phone</p>
-                        <p class="phone">{{ selectedContact.phone }}</p>
-                    </div>
+            </div>
+            <div class="contact_detail_section">
+                <p class="information_headline">Contact Information</p>
+                <div class="information">
+                    <p class="email_headline">Email</p>
+                    <p class="email">{{ selectedContact.email }}</p>
+                    <p class="phone_headline">Phone</p>
+                    <p class="phone">{{ selectedContact.phone }}</p>
                 </div>
             </div>
+        </div>
         }
     </div>
 
@@ -82,9 +81,9 @@
   <p>{{ item.phone }}</p>
   } -->
 
-    <!-- <input [(ngModel)]="name" type="text" />
+    <input [(ngModel)]="name" type="text" />
   <input [(ngModel)]="email" type="text" />
-  <input [(ngModel)]="phone" type="text" /> -->
+  <input [(ngModel)]="phone" type="text" />
     <!-- <button (click)="addContactList()">Neuer Kontakt</button> -->
     <!-- <button (click)="getList(); getList2()">List ausgeben</button> -->
 </section>
