update function in overlay.component included

--- a/src/app/main/content/contacts/contacts.component.html
+++ b/src/app/main/content/contacts/contacts.component.html
@@ -81,9 +81,9 @@
   <p>{{ item.phone }}</p>
   } -->
 
-    <input [(ngModel)]="name" type="text" />
+    <!-- <input [(ngModel)]="name" type="text" />
   <input [(ngModel)]="email" type="text" />
-  <input [(ngModel)]="phone" type="text" />
+  <input [(ngModel)]="phone" type="text" /> -->
     <!-- <button (click)="addContactList()">Neuer Kontakt</button> -->
     <!-- <button (click)="getList(); getList2()">List ausgeben</button> -->
 </section>
