--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -25,5 +25,5 @@ $light_blue: rgba(41, 171, 226, 1);
 $blue: rgba(0, 124, 238, 1);
 $button_hover_blue: rgba(42, 61, 89, 1);
 
-/* bg section */
+/* bg color for each section */
 $cream_white: #f6f7f8;
