added:help, policy, imprint responsiv

--- a/src/app/main/content/content.component.scss
+++ b/src/app/main/content/content.component.scss
@@ -3,11 +3,12 @@
 section {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-start;
+  justify-content: flex-start;  
 }
 
 div {
   width: 100%;
+  flex: 1;
 }
 
 app-summary,
@@ -20,17 +21,28 @@ app-help {
   display: none;
 }
 
+app-policy,
+app-imprint,
+app-help {
+  max-height: calc(100vh - 88px);
+  overflow-y: auto;
+
+  box-shadow: 0px 4px 6px 0px rgba($black, 0.1) inset;
+}
+
 .active {
   display: block;
 }
-
 
 @media (max-width: 1000px) {
   section {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center;    
   }
 
-
+  div{
+    margin-bottom: 80px;
+  }
+  
 }
