--- a/src/app/shared/help/help.component.scss
+++ b/src/app/shared/help/help.component.scss
@@ -1,52 +1,68 @@
-@import './../../../styles.scss';
+@import "./../../../styles.scss";
 
 .join_aqua {
-    color: $aqua;
+  color: $aqua;
 }
 
 section {
+  @include dFlex($jc: space-between);
+  flex-direction: column;
+  padding: 128px calc(max(80px, (100% - 1920px) / 2));
+
+  .help_header {
     @include dFlex($jc: space-between);
-    flex-direction: column;
-    padding: 128px calc(max(80px,(100% - 1920px) / 2));
 
-    .help_header {
-        @include dFlex($jc: space-between);
+    padding: 32px 0;
+    width: 100%;
 
-        padding: 32px 0;
-        width: 100%;
-
-        >h1 {
-            @include font($fs: 40px, $fw: 800);
-            padding-top: 32px 0;
-        }
-
-        >a {
-            background-image: url('./../../../assets/img/icons/arrow_left.svg');
-            height: 37px;
-            width: 37px;
-        }
+    > h1 {
+      @include font($fs: 40px, $fw: 800);
+      padding-top: 32px 0;
     }
 
-    >.help_content {
-        width: 100%;
-
-        >h2 {
-            @include font($fs: 24px, $fw: 800);
-            padding-top: 32px 0;
-        }
-
-        >p {
-            padding: 24px 0;
-        }
-        
-        >ol {
-            @include font($fs: 24px, $fw: 800);
-            padding-right: 40px;
-            >li {
-                @include font($fs: 16px, $fw: 400);
-                padding-top: 24px;
-                padding-left: 40px;
-            }
-        }
+    > a {
+      background-image: url("./../../../assets/img/icons/arrow_left.svg");
+      height: 37px;
+      width: 37px;
     }
+  }
+
+  > .help_content {
+    width: 100%;
+
+    /*wird das überhaupt angesprochen?*/
+    > h2 {
+      @include font($fs: 24px, $fw: 800);
+      padding-top: 32px 0;
+    }
+
+    > p {
+      padding: 24px 0;
+    }
+
+    > ol {
+      @include font($fs: 24px, $fw: 800);
+      padding-right: 40px;
+      > li {
+        @include font($fs: 16px, $fw: 400);
+        padding-top: 24px;
+        padding-left: 40px;
+      }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  section {
+    padding: 50px 16px;
+  }
+
+  h2 {
+    font-size: 27px;
+    margin-top: 35px;
+  }
+
+  h1 {
+    font-size: 47px;
+  }
 }
