--- a/src/app/main/login/login.component.html
+++ b/src/app/main/login/login.component.html
@@ -1,2 +1,2 @@
-<h3>login-Section</h3>
-<p>In dieser Sectionen kann man sich einloggen (kommt später).</p>
+<!-- <h3>login-Section</h3>
+<p>In dieser Sectionen kann man sich einloggen (kommt später).</p> -->
