--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -111,6 +111,9 @@ nav {
     flex-direction: row;
     width: 100%;
     height: 80px;
+    position: fixed;
+    left: 0;
+    bottom: 0;    
   }
 
   .icon-section {
@@ -124,7 +127,7 @@ nav {
     margin-bottom: 0;
 
     ul {
-      @include dFlex($jc: space-between);
+      @include dFlex($jc: space-between, $g:10px);
       padding: 0 8px;
 
       li {
