--- a/src/app/shared/imprint/imprint.component.scss
+++ b/src/app/shared/imprint/imprint.component.scss
@@ -3,19 +3,18 @@
 section {
   @include dFlex($ai: flex-start);
   flex-direction: column;
-  
+
   color: $black;
 
   padding: 100px 75px;
 }
 
-div{
+div {
   margin-top: 35px;
 }
 
-ul{
- padding-left: 20px;
- 
+ul {
+  padding-left: 20px;
 }
 
 h1 {
@@ -31,15 +30,33 @@ h2 {
 h3 {
   font-size: 16px;
   font-weight: bolder;
-  
 }
 
-p{
-    font-size: 16px;
+p {
+  font-size: 16px;
 }
 
-span{
+span {
   color: $light_blue;
 }
 
+@media (max-width: 1000px) {
+  section {
+    padding: 50px 16px;
+  }
 
+  div {
+    margin-top: 35px;
+  }
+
+  h1 {
+    font-size: 47px;    
+  }    
+}
+
+@media (max-width: 375px) {
+  h1 {
+    text-align: center;   
+  }  
+
+}
